--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <br>
     <br>
     <img width=300px src="D:\Васильева181\img\kitt3.jpg">
+    <br>
+    <br>
+    <br>
+    <img width=300px src="D:\Васильева181\img\kott.jpg">
 
   </body>
 </html>
